# s18

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  pyproject.toml  requirements-ci.txt
agents/: base_agent.py
config/: agent_config.yaml  mcp_cache.json  mcp_server_config.yaml  models.json  settings.defaults.json  settings.json  settings_loader.py  user_preferences.json
core/: circuit_breaker.py  event_bus.py  explorer_utils.py  graph_adapter.py  json_parser.py  loop.py  metrics_aggregator.py  model_manager.py  morning_briefing.py  persistence.py  scheduler.py  utils.py
mcp_servers/: README_browser.md  README_rag.md  README_sandbox.md  index_scheduler.py  mcp_config.json  multi_mcp.py  server_browser.py  server_rag.py  server_sandbox.py
memory/: context.py  mem0_store.py
remme/: ARCHITECTURE.md  __init__.py  bootstrap.py  extractor.py  normalizer.py  preferences.py  staging.py  store.py  utils.py
routers/: __init__.py  agent.py  apps.py  browser_utils.py  chat.py  cron.py  explorer.py  git.py  ide_agent.py  inbox.py  mcp.py  metrics.py  news.py  prompts.py  python_tools.py  rag.py  remme.py  runs.py  settings.py  skills.py  stream.py  tests.py
scripts/: backfill_notes.py  file_outline.py  manual_sync.py  replace_symbol.py  stress_test_2026.py  test_event_bus.py  test_inbox.py  test_persistence.py  test_scheduler.py  verify_agent_tools.py
shared/: __init__.py  state.py
tests/: agent_automated_test.py  audit_features.py  real_verification_suite.py  verify_scheduler_suite.py
tools/: ast_differ.py  sandbox.py
(+33 files in other folders)
